ISSUE-6 Изменение структуры проекта.